Document Update :memo:

--- a/docs/certificate/Cover.tex
+++ b/docs/certificate/Cover.tex
@@ -12,10 +12,10 @@ For the degree of\\
 \vspace{0.1in}
 \large by\\
 \vspace{0.1in}
-{\large \bf Rakshan Shetty} Roll No. \underline{12IT1017}\\
-{\large \bf Rohit Ambre} Roll No. \underline{13IT3002}\\
-{\large \bf Nakul Chauhan} Roll No. \underline{13IT1049}\\
-{\large \bf Shakeel Shaikh} Roll No. \underline{12IT1096}\\
+{\large \bf Rakshan Shetty} \underline{12IT1017}\\
+{\large \bf Rohit Ambre} \underline{13IT3002}\\
+{\large \bf Nakul Chauhan} \underline{13IT1049}\\
+{\large \bf Shakeel Shaikh} \underline{12IT1096}\\
 %{\Large (University PG Registration No. RAIT/402/Dt. 27/09/2013)}\\
 \vspace{0.2in}
 \large Supervisor\\
