--- a/docs/certificate/certificate.tex
+++ b/docs/certificate/certificate.tex
@@ -14,10 +14,10 @@
 \vspace{0.1in}
 {\large \it is a bonafide work done by}\\
 \vspace{0.2in}
-{\large \bf Rakshan Shetty} Roll No. \underline{12IT1017}\\
-{\large \bf Rohit Ambre} Roll No. \underline{13IT3002}\\
-{\large \bf Nakul Chauhan} Roll No. \underline{13IT1049}\\
-{\large \bf Shakeel Shaikh} Roll No. \underline{12IT1096}\\
+{\large \bf Rakshan Shetty} \underline{12IT1017}\\
+{\large \bf Rohit Ambre} \underline{13IT3002}\\
+{\large \bf Nakul Chauhan} \underline{13IT1049}\\
+{\large \bf Shakeel Shaikh} \underline{12IT1096}\\
 \vspace{0.1in}
 {\large \it and is submitted in the partial fulfillment of the requirement for the}\\
 {\large \it degree of}\\
