--- a/docs/certificate/declaration.tex
+++ b/docs/certificate/declaration.tex
@@ -10,13 +10,15 @@ I declare that this written submission represents my ideas in my own words and w
 \end{quote}
 \vspace{1.5in}
 
-\hspace{6.5cm}Name Of the student1 \hspace{0.2cm} Roll No. 1234 \hspace{0.2cm} \underline{Signature}
+\hspace{6.5cm}Rakshan Shetty \hspace{0.2cm} 12IT1017 \hspace{0.2cm} \rule{2cm}{0.5pt}
 \vspace{0.1in}
 
-\hspace{6.5cm}Name Of the student2 \hspace{0.2cm} Roll No. 1234 \hspace{0.2cm} \underline{Signature}
+\hspace{6.5cm}Rohit Ambre \hspace{0.6cm} 13IT3002 \hspace{0.2cm} \rule{2cm}{0.5pt}
 \vspace{0.1in}
 
-\hspace{6.5cm}Name Of the student3 \hspace{0.2cm} Roll No. 1234 \hspace{0.2cm} \underline{Signature}
+\hspace{6.5cm}Nakul Chauhan \hspace{0.2cm} 13IT1049 \hspace{0.2cm} \rule{2cm}{0.5pt}
+
+\hspace{6.5cm}Shakeel Shaikh \hspace{0.2cm} 12IT1096 \hspace{0.2cm} \rule{2cm}{0.5pt}
 
 \vspace{0.2in}
 \begin{flushleft}
