--- a/docs/certificate/coa_examiner.tex
+++ b/docs/certificate/coa_examiner.tex
@@ -5,7 +5,7 @@
 \end{center}
 \vspace{0.5in}
 
-This is to certify that the project entitled "Title of the project” is a bonafide work done by    Name of the Student-1, Name of the Student-2 and Name of the Student-3 under the supervision of Prof. Name of the Project Guide. This project has been approved for the award of Bachelor’s Degree in Information Technology, University of Mumbai.
+This is to certify that the project entitled "Docstash - Personal Cloud Storage" is a bonafide work done by Rakshan Shetty, Rohit Ambre, Nakul Chauhan and Shakeel Shaikh under the supervision of Prof. Nilima Dongre. This project has been approved for the award of Bachelor’s Degree in Information Technology, University of Mumbai.
 
 \centering{ {Examiners :}\\
 \hspace{5cm} 1. \dashuline{\hspace{7cm}}
