--- a/docs/report/literature.tex
+++ b/docs/report/literature.tex
@@ -1,3 +1,20 @@
 \chapter{Review of Literature}
 \newpage
 \section{Review of Literature}
+
+
+\begin{itemize}
+\item Prof Feige, U., Fiat, A. and Shamir in their paper introduced to the concept of zero knowledge which was further implemented by Springer Inc. It gives maximum protection to users data by client-side encryption technology to secure users file in their own devices with some high-grade encryption  and the files cannot be decrypted in a cloud.
+
+\item Digital Rights Management was introduced by Tresorit Inc in their paper where they explain the process of file sharing in collaboration process. The DRM defines which user have right to modify the file or just read the file so that users with permission can only change the content of files while sharing.
+
+\item Using different types of storage system as per need is described by Prof Arun Teneja. File and block storage might provide better performance, but granular metadata and near-infinite scalability make object storage equally beneficial. Use cases for each storage system is described in his paper.
+
+\item Drive also has some unique features that integrate different third party software in it. This software helps us in editing and managing our files and folders online. It help in editing those file in collaboration mode so multiple users can edit simultaneously.
+
+\item Dropbox is another such cloud storage provider with unique features where users can download the native desktop application and the files and folder in specific location will automatically be synchronized. They also provide enterprise support for storage of company’s large amount of data.
+
+
+
+
+\end{itemize}
