--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -53,7 +53,7 @@
 \pagenumbering{arabic}
 \input{introduction}
 \input{literature}
-% \input{Chapter3}
+\input{planning}
 % \input{Chapter4}
 % \input{Chapter5}
 % \input{Chapter10}
@@ -61,7 +61,7 @@
 % \input{Chapter7}
 
 %\input{chapter9}
-% \input{Bibliography}
+\bibliography{bibliography}
 % \input{acknowledgement}\thispagestyle{empty}
 
 \end{document}
