Changes in Doc :memo:

--- a/docs/certificate/Cover.tex
+++ b/docs/certificate/Cover.tex
@@ -13,7 +13,7 @@ For the degree of\\
 \large by\\
 \vspace{0.1in}
 {\large \bf Rakshan Shetty} \underline{12IT1017}\\
-{\large \bf Rohit Ambre} \underline{13IT3002}\\
+{\large \bf Rohit Ambre} \hspace{0.2in} \underline{13IT3002}\\
 {\large \bf Nakul Chauhan} \underline{13IT1049}\\
 {\large \bf Shakeel Shaikh} \underline{12IT1096}\\
 %{\Large (University PG Registration No. RAIT/402/Dt. 27/09/2013)}\\
