--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -54,14 +54,14 @@
 \input{introduction}
 \input{literature}
 \input{planning}
-% \input{Chapter4}
-% \input{Chapter5}
-% \input{Chapter10}
-% \input{Chapter6}
-% \input{Chapter7}
+\input{proposed}
+\input{design}
+\input{screenshots}
+\input{futurescope}
+% \input{conclusion}
 
 %\input{chapter9}
-\bibliography{bibliography}
+% \bibliography{bibliography}
 % \input{acknowledgement}\thispagestyle{empty}
 
 \end{document}
