--- a/docs/certificate/certificate.tex
+++ b/docs/certificate/certificate.tex
@@ -45,6 +45,6 @@
 
       \noindent\rule{4cm}{0.5pt} & \hspace{0.5in}\noindent\rule{4cm}{0.5pt} & \hspace{0.12in}\noindent\rule{4cm}{0.5pt} \\
       \small{Project Co-ordinator} & \hspace{0.5in}\small{Head of Department} & \hspace{0.12in}\small{Principal} \\
-   \small{\textbf{(Prof. Reshma Gulwani)}}& \hspace{0.5in}\small{\textbf{(Dr. Ashish Jadhav)}} & \hspace{0.25in}\small{\textbf{(Dr. Ramesh Vasappanavara)}} \\
+   \small{\textbf{(Prof. Reshma Gulwani)}}& \hspace{0.5in}\small{\textbf{(Prof. Ashish Jadhav)}} & \hspace{0.25in}\small{\textbf{(Dr. Ramesh Vasappanavara)}} \\
     \end{tabular}
 \end{center}
