--- a/docs/report/design.tex
+++ b/docs/report/design.tex
@@ -2,35 +2,35 @@
 \newpage
 
 \section{Data Flow Diagrams}
-% \begin{figure}[h]
-%   \begin{center}
-%   \psfig{figure=./dfd.png,width=6in,height=4.5in}
-%     \caption{DFD –level 0 for Society Scoop Application }
-%     \label{7}
-%     \end{center}
-%     \end{figure}
+\begin{figure}[h]
+  \begin{center}
+  \psfig{figure=./img/level1.eps,height=4.5in}
+    \caption{DFD –level 0 for Docstash Application }
+    \label{7}
+\end{center}
+\end{figure}
 
-%       \vspace{0.2cm} The user logs in into the app. New users need to sign up before they can log in. The login details are stored in a database. The administrator manages the users and content of the application.
+\vspace{0.2cm} The user logs in into the app. New users need to sign up before they can log in. The login details are stored in a database. The administrator manages the users and content of the application.
 
-% \begin{figure}[h]
-%     \begin{center}
-%   \psfig{figure=./dfd2.eps,width=6in,height=4.5in}
-%     \caption{DFD –level 1 for Society Scoop Application }
-%     \label{8}
-%     \end{center}
-%     \end{figure}
+\begin{figure}[h]
+\begin{center}
+  \psfig{figure=./img/level2.eps,width=6.5in,height=4in}
+    \caption{DFD –level 1 for Docstash Application }
+    \label{8}
+\end{center}
+\end{figure}
 
        \vspace{0.2cm}The user uses username and password to login into the application. If the user is a new user, he is first required to sign up. The login details are stored in the login database. When a user tries to log in, the credentials entered are compared with the credentials stored in the database. If the user is a valid user he is allowed to access the application.
 The applications database contains events and notices that are displayed in the Society Scoop application. The system administrator can update the events and notices.
 
 
-% \begin{figure}[h]
-%     \begin{center}
-%   \psfig{figure=./dfd2.eps,width=6in,height=4.5in}
-%     \caption{DFD –level 2 for Society Scoop Application }
-%     \label{9}
-%     \end{center}
-%     \end{figure}
+\begin{figure}[h]
+    \begin{center}
+  \psfig{figure=./img/activity.eps,width=6in,height=4.5in}
+    \caption{Activity Diagram for Docstash }
+    \label{9}
+    \end{center}
+    \end{figure}
 
 \vspace{0.2cm}In the figure above we can see the user first login to the application through the login credentials which he gets during the signup process. Once the user is authenticated, he successfully can avail the benefits of the application. The administrator plays the vital role by updating various things like Events and notices which are to be held in the society.
 The polling feature helps the residents to take a decision on the particular society issue/ matters etc. all the reviews of the residents are stored in the application database which is handled by the administrator. The admin also makes sure that the recent updates in the restaurant menu is being reflected to the user immediately for efficient service. All these updating is done by the web application which is handled by the administrator.
