--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -56,13 +56,13 @@
 \input{planning}
 \input{proposed}
 \input{design}
+\input{testing}
 \input{screenshots}
 \input{futurescope}
-% \input{conclusion}
+\input{conclusion}
 
-%\input{chapter9}
-% \bibliography{bibliography}
-% \input{acknowledgement}\thispagestyle{empty}
+\input{reference}
+\input{acknowledgement}\thispagestyle{empty}
 
 \end{document}
 
