--- a/docs/report/proposed.tex
+++ b/docs/report/proposed.tex
@@ -19,45 +19,47 @@
 
 
 \begin{itemize}
-\item	\textbf{ANDROID (Platform/OS  for mobile application) }
-Android is a mobile operating system (OS) currently developed by Google, based on the Linux kernel and designed primarily for touchscreen mobile devices such as smartphones and tablets. Android’s user interface is based on direct manipulation, using touch gestures that loosely correspond to real-world actions, such as swiping, tapping and pinching, to manipulate on-screen objects, along with a virtual keyboard for text input. In addition to touchscreen devices, Google has further developed Android TV for televisions, Android Auto for cars, and Android Wear for wrist watches, each with a specialized user interface.
 
-\item	\textbf{SQLITE (Database for mobile application) }
-SQLite is a open source SQL database that stores data to a text file on a device. Android comes in with built in SQLite database implementation. SQLite supports all the relational database features. In order to access this database, you don’t need to establish any kind of connections for it like JDBC, ODBC etc.
 
-Features of SQLite:
+\item	\textbf{Nodejs (Technology used backend server application) }
+Node.js is a JavaScript runtime built on Chrome's V8 JavaScript engine. Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient. Node.js' package ecosystem, npm, is the largest ecosystem of open source libraries in the world.
+
+Some of the important core features of Nodejs are:
 \begin{itemize}
-\item	•	Transactions are atomic, consistent, isolated, and durable (ACID) even after system crashes and power failures.
+\item	• Asynchronous and Event Driven
 
-\item •	Zero-configuration – no setup or administration needed.
+\item •	Single Threaded but Highly Scalable
 
-\item •	Full SQL implementation with advanced features like partial indexes and common table expressions. (Omitted features)
-
-\item	•	A complete database is stored in a single cross-platform disk file. Great for use as an application file format.
+\item •	No Buffering
 \end{itemize}
 
-\item	\textbf{JAVA (Technology used for mobile application) }
-Android applications are developed using the Java language. As of now, that’s really your only option for native applications. Java is a very popular programming language developed by Sun Microsystems (now owned by Oracle). Developed long after C and C++, Java incorporates many of the powerful features of those powerful languages while addressing some of their drawbacks. Still, programming languages are only as powerful as their libraries. These libraries exist to help developers build applications.
+This is in contrast to today's more common concurrency model where OS threads are employed. Thread-based networking is relatively inefficient and very difficult to use. Furthermore, users of Node are free from worries of dead-locking the process, since there are no locks. Almost no function in Node directly performs I/O, so the process never blocks. Because nothing blocks, scalable systems are very reasonable to develop in Node.
 
-Some of the Java’s important core features are:
+\item	\textbf{Docker(Software container platform) }
+Docker is the world’s leading software container platform. Developers use Docker to eliminate “works on my machine” problems when collaborating on code with co-workers. Operators use Docker to run and manage apps side-by-side in isolated containers to get better compute density. Enterprises use Docker to build agile software delivery pipelines to ship new features faster, more securely and with confidence for both Linux and Windows Server apps.
+\item	\textbf{MongoDB (Database for backend server) }
+MongoDB is a cross-platform, document oriented database that provides, high performance, high availability, and easy scalability. MongoDB works on concept of collection and document. Classified as a NoSQL database program, MongoDB uses JSON-like documents with schemas. MongoDB is developed by MongoDB Inc. and is free and open-source, published under a combination of the GNU Affero General Public License and the Apache License.
+
+Features of MongoDB:
 \begin{itemize}
-\item	• It’s easy to learn and understand
+\item •Scalability (from a standalone server to distributed architectures of huge clusters): This allows us to shard our database transparently across all our shards. This increases the performance of our data processing.
 
-\item •	It’s designed to be platform-independent and secure, using virtual machines
+\item •Aggregation: batch data processing and aggregate calculations using native MongoDB operations.
 
-\item •	It’s object-oriented
+\item •Native Replication: syncing data across all the servers at the replica set.
+
+\item •Security: authentication, authorization, etc.
 \end{itemize}
 
-Android relies heavily on these Java fundamentals. The Android SDK includes many standard Java libraries (data structure libraries, math libraries, graphics libraries, networking libraries and everything else you could want) as well as special Android libraries that will help you develop awesome Android applications.
 
+\item	\textbf{React,Redux,Sass and JavaScript (Front end for web app) }
 
-\item	\textbf{PHP (Server side technology used in web application) }
-PHP is a server-side scripting language designed for web development but also used as a general-purpose programming language. As of January 2013, PHP was installed on more than 240 million websites (39 percent of those sampled) and 2.1 million web servers. Originally created by Rasmus Lerdorf in 1994, the reference implementation of PHP (powered by the Zend Engine) is now produced by The PHP Group. While PHP originally stood for Personal Home Page, it now stands for PHP: Hypertext Preprocessor, which is a recursive backronym.
+React is front end library developed by Facebook. It's used for handling view layer for web and mobile apps. ReactJS allows us to create reusable UI components. It is currently one of the most popular JavaScript libraries and it has strong foundation and large community behind it.
 
-\item	\textbf{HTML, CSS and JavaScript (Front end for web app) }
-HTML is a mark-up language for describing web documents (web pages). HTML stands for Hyper Text Mark-up Language. A mark-up language is a set of mark-up tags. HTML documents are described by HTML tags. Each HTML tag describes different document content.
+Redux is a predictable state container for JavaScript apps.It helps to write applications that behave consistently, run in different environments (client, server, and native), and are easy to test. On top of that, it provides a great developer experience, such as live code editing combined with a time traveling debugger.
 
-Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML
+Sass is a scripting language that is interpreted into Cascading Style Sheets 
+  (CSS).Sass is completely compatible with all versions of CSS. We take this compatibility seriously, so that you can seamlessly use any available CSS libraries.The official implementation of Sass is open-source and coded in Ruby.
 
 JavaScript is a high-level, dynamic, untyped, and interpreted programming language. It has been standardized in the ECMAScript language specification. Alongside HTML and CSS, it is one of the three essential technologies of World Wide Web content production; the majority of websites employ it and it is supported by all modern web browsers without plug-ins.
 
@@ -85,7 +87,6 @@ The modules of the project are
 
 \item	Web Application module
 
-\item   Backend module
 \end{itemize}
 
 
@@ -94,77 +95,58 @@ The modules of the project are
 
 When the user downloads and opens the application for the first time, he will be prompted to login. In case the user does not have any previous login credentials, he can register to use the application. The registration module asks for some basic information such as username, password and flat number. Once the user has been successfully registered, he can now enter the application.
 
-\subsection{Events/notices module:}
+\subsection{File Upload module:}
 
-The events and notices module is the first module. It displays the information regarding upcoming events and notices that are active and have been uploaded by the administrator. A small description of the event will be available for the user to read to inform the user about any further steps if necessary.
+The file upload module is the first module. After sucessful login user can upload any kind of data like music, videos, documents, images etc. The Metadata of this uploded file is sent to the database and then  forwarded for encrypyion. 
 
-\subsection{Contacts module:}
+\subsection{File Encryption module:}
 
-The contacts module is a useful module. It contains a list of all the important contacts that are a necessity for any housing society. It includes contact details of electricians, plumbers, laundry etc.
+The file is divided into chunks. Each chunk is encrypted with AES 256-cbc encryption technique. And this encrypted data is saved in file system. The AES encryption algorithm defines a number of transformations that are to be performed on data stored in an array.
 
-\subsection{Restaurant module:}
-The restaurant module includes the menu of the clubhouse/society restaurant. The residents can view the whole menu and place an order directly through the applications interactive interface. The restaurant staff will receive this order along with the details of the resident who placed the order. The restaurant can then verify the order and generate the bill for the same.
+\subsection{Torrent Download module:}
+Users can use BitTorrent protocol to download files directly to their storage. They have options of providing torrent link, magnet link or omni search. Accordingly the results will be shown to the user and after clicking on required link the torrent content will be downloaded to cloud. This displayed result of torrent download can be viewed by any user logged in to the website. 
 
 
-\subsection{Offers module:}
+\subsection{Chatbot module:}
 
-This module contains useful offers that the residents can view and take advantage of. Example: 30 percent off on apparel in Amazon.
+Online users can chat with each other. This is implemented using real time connection in web socket.  Bot accepts users query which is processed by using Natural Language Processing (NLP) and display intended result.  
 
-\subsection{Feedback module:}
 
-Residents can provide their suggestions regarding various society issues and provide their feedback. They can express their opinions via the applications interface.
+\subsection{Social Media module:}
+
+ Users can have access to social media platform like Youtube, Twitter even if there ISP has restricted access to such websites.
+
 
 \subsection{Web Application module:}
 
-The web application provides a simple interface for the society managers and secretary to
+The UI is designed as a Single Page Application so that is feels like computer software as is easy to navigate as pages do not need to be refreshed regularly to get updates.
 
-\begin{itemize}
 
-\item	Add and update event status.
 
-\item	Add new offers.
 
-\item  Add and update important contacts.
 
-\item  View feedback of various residents regarding issues.
-
-\item	Manage restaurant menu
-
-\end{itemize}
-
-Along with this, the web application will have a separate login for restaurant staff to view and manage orders.
 
 \subsection{Backend module:}
 
-The backend runs on Apache server and contains databases for user details, events, offers, menu and feedback.
-
+It is an nodejs server which runs inside a docker environment. It is an API based end point which serves data with the frontend. Also it scales up and down depending on the server load. 
 
 \section{System Requirements}
 \begin{itemize}
 
 \subsection{Hardware Requirements:}
 
-\item[1.] Android Phone :
-
-
-\begin{itemize}
-
-\item[a.]	Internal Memory  - 180MB
-
-\item[b.]	Processor –	minimum 810MHz
-\end{itemize}
 
 
 
-\item[2.] PC
+\item[1.] PC
 
 \begin{itemize}
 
-\item[a.] RAM –	512MB
+\item[a.] RAM –	4GB
 
 \item[b.] Processor – Intel Pentium 3 1.4GHz (minimum)
 
-\item[c.] HDD –	minimum 512MB
+\item[c.] HDD –	minimum 1TB
 
 \end{itemize}
 
@@ -177,15 +159,13 @@ Minimum software requirements are:
 
 \begin{itemize}
 
-\item[a.] Eclipse 4.3
+\item[a.] Atom text editor  
 
-\item[b.] JVM 1.6
+\item[b.] Node.Js
+\item[c.] Windows XP,7 or above (for web app)
 
-\item[c.] Android OS – v2.3 or above
+\item[d.] Internet Explorer 10 or above
 
-\item[d.] Windows XP,7 or above (for web app)
-
-\item[e.] Internet Explorer 10 or above
 
 \end{itemize}
 
@@ -193,43 +173,22 @@ Minimum software requirements are:
 
 \section{Working of the application}
 \begin{itemize}
-\item[1.]User can install the app using apk.
-\item[2.]On opening the app, new users can proceed for registration. Existing users can directly login using their credentials. Registration and login functions are done using php requests.
-\item[3.]On successfully logging in, the user can have access to all modules of the app.
-\item[4.]The administrator and restaurant people manage the content of the application.
+\item[1.]User can access Docstash in any web browser.
+\item[2.]On opening the site, new users can proceed for registration. Existing users can directly login using their credentials. Registration and login functions are done using php requests.
+\item[3.]On successfully logging in, the user can have access to all modules of the site.
+
 \end{itemize}
 
 
-\section{Working of the Admin Panel}
-\begin{itemize}
-\item[1.]Administrator can access Admin panel through the url www.societyscoop.comli.com
-\item[2.]He will first need to login into the Admin Panel, after which he will have access to the various functions like adding and editing events.
-\item[3.]Events can be added through the add event tab and edited through the edit event tab. The event id is generated automatically. The admin will have to enter the event name and description.
-\item[4.]These events are then made available to the users of the app through a php request.
-\end{itemize}
 
 
-    \section{Working of the Feedback module}
-\begin{itemize}
-\item[1.]Users of the app can fill out feedback by using a unique query id provided in the events tab.
-\item[2.]The Admin can then view the feedback for different queries by using the query id in the web application.
-\end{itemize}
-
-    
-
-    \section{Working of the Restaurant panel}
-\begin{itemize}
-\item[1.]The restaurant users can access the restaurant admin tab through a different url.
-\item[2.]Various menu items can be added and removed by the restaurant staff.
-\item[3.]Active orders can be viewed and completed orders can be sent to the completed list.
-\item[4.]Users can view the menu and order directly through the application.
-\end{itemize}
+ 
 
 
 % \section{Diagrams}
 % \begin{figure}[h]
 %   \begin{center}
-%   \psfig{figure=./function.jpg,width=6in,height=4.5in}
+%   \psfig{figure=./activity.eps,width=6in,height=4.5in}
 %     \caption{Working of Application}
 %     \label{7}
 %     \end{center}
@@ -259,14 +218,3 @@ Minimum software requirements are:
 %     \label{10}
 %     \end{center}
 %     \end{figure}
-
-
-
-
-
-
-
-
-
-
-
