--- a/docs/certificate/declaration.tex
+++ b/docs/certificate/declaration.tex
@@ -17,6 +17,7 @@ I declare that this written submission represents my ideas in my own words and w
 \vspace{0.1in}
 
 \hspace{6.5cm}Nakul Chauhan \hspace{0.2cm} 13IT1049 \hspace{0.2cm} \rule{2cm}{0.5pt}
+\vspace{0.1in}
 
 \hspace{6.5cm}Shakeel Shaikh \hspace{0.2cm} 12IT1096 \hspace{0.2cm} \rule{2cm}{0.5pt}
 
