--- a/docs/report/abstract.tex
+++ b/docs/report/abstract.tex
@@ -3,5 +3,5 @@
 \begin{abstract}
 Cloud computing provides an enormous amount of virtual storage to the users. Cloud storage mainly helps to small and medium scale industries to reduce their investments and maintenance of storage servers. Cloud storage is efficient for data storage. Users' data are sent to the cloud is to be stored in the public cloud environment. Security of cloud storage is ensured through confidentiality parameter. To ensure the confidentiality, the most common used technique is encryption. To have efficient cloud storage confidentiality. Based on the type of data, encryption and can be applied. Confidentiality can be achieved with a combination of encryption. The user data is encrypted using AES and divided into multiple blocks and stored on different cloud servers.\par
 
-“Docstash” Application handles and manages the day to day data storage activitie. It is a cloud storage solution provided to user where data can be stored in the cloud environment. Stored data is encrypted and compressed where users can access from anywhere. User can modify his data in Docstash without having the actual data in his physical device.This project aims at providing a generic platform for cloud storage solution. Docstash is a platform using latest technologies to provide a cloud environment that managed data integrity and security.  
+“Docstash” Application handles and manages the day to day data storage activities. It is a cloud storage solution provided to user where data can be stored in the cloud environment. Stored data is encrypted and compressed where users can access from anywhere. User can modify his data in Docstash without having the actual data in his physical device.This project aims at providing a generic platform for cloud storage solution. Docstash is a platform using latest technologies to provide a cloud environment that managed data integrity and security.  
 \end{abstract} 
