--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -35,8 +35,8 @@
 \usepackage{times}
 %\usepackage{algorithm}
 %\usepackage{mathtools}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\bibliography{bib}
 \begin{document}
 \pagenumbering{roman}
 \input{abstract}
@@ -44,8 +44,8 @@
 \addcontentsline{toc}{chapter}{Abstract}
 \listoffigures
 \addcontentsline{toc}{chapter}{List of Figures}
-\listoftables
-\addcontentsline{toc}{chapter}{List of Tables}
+% \listoftables
+% \addcontentsline{toc}{chapter}{List of Tables}
 
 
 
@@ -60,7 +60,6 @@
 \input{screenshots}
 \input{futurescope}
 \input{conclusion}
-
 \input{reference}
 \input{acknowledgement}\thispagestyle{empty}
 
