--- a/docs/report/planning.tex
+++ b/docs/report/planning.tex
@@ -20,3 +20,25 @@ Implementing security features to provide more reliable platform. Providing encr
 Using a variety of inputs to test for bugs if any and correct them. Deploying the application for public use.
 
 \end{itemize}
+
+\begin{figure}[h]
+\begin{center}
+    \psfig{figure=./img/gantt1.png,height=2.3in}
+    \caption{Project schedule-1}
+    \label{1}
+\end{center}
+\end{figure}
+\begin{figure}[h]
+\begin{center}
+    \psfig{figure=./img/gantt2.png,height=2.3in}
+    \caption{Project schedule-2}
+    \label{1}
+\end{center}
+\end{figure}
+\begin{figure}[h]
+\begin{center}
+    \psfig{figure=./img/gantt3.png,height=2.3in}
+    \caption{Project schedule-3}
+    \label{1}
+\end{center}
+\end{figure}
