--- a/docs/report/proposed.tex
+++ b/docs/report/proposed.tex
@@ -7,13 +7,13 @@
 \vspace{0.2cm}The idea of developing this application is it will ensure data integrity and security of user files. The main advantage is that it allows user to view edit and download there files from any devices. user can login with 3rd party service like Google to extend their docstash storage.
 
 
-% \begin{figure}[h]
-%     \begin{center}
-%   \psfig{figure=./system.eps,width=6in,height=4.5in}
-%     \caption{Proposed System}
-%     \label{5}
-%     \end{center}
-%     \end{figure}
+\begin{figure}[h]
+\begin{center}
+  \psfig{figure=./img/architecture.eps,width=6in,height=4.5in}
+    \caption{Proposed System}
+    \label{5}
+\end{center}
+\end{figure}
 
 \section{Proposed Methodology}
 
@@ -66,7 +66,7 @@ JavaScript is a high-level, dynamic, untyped, and interpreted programming langua
 \end{itemize}
 
 
-
+\newpage
 
 \textbf{MODULES OF THE PROJECT:}
 
@@ -128,8 +128,9 @@ The UI is designed as a Single Page Application so that is feels like computer s
 
 \subsection{Backend module:}
 
-It is an nodejs server which runs inside a docker environment. It is an API based end point which serves data with the frontend. Also it scales up and down depending on the server load. 
+It is an nodejs server which runs inside a docker environment. It is an API based end point which serves data with the frontend. It also scales up and down depending on the server load. 
 
+\newpage
 \section{System Requirements}
 \begin{itemize}
 
