--- a/docs/report/reference.tex
+++ b/docs/report/reference.tex
@@ -1,15 +1,23 @@
-\newpage
+ \newpage
 \addcontentsline{toc}{chapter}{References}
 \renewcommand{\bibname}{References}
 \begin{thebibliography}{99}
 
 
 \bibitem{1}
-“Implementation of an Android Application for Management of a Housing Society”- International Journal Of Engineering And Computer Science ISSN:2319-7242 Volume 4 Issue 6 June 2015, Page No. 12383-12389.
+“Research on Cloud Data Storage Technology and Its Architecture Implementation”- Kun Liua
+, Long-jiang Donga*,2012 International Workshop on Information and Electronics Engineering (IWIEE).
 
 \bibitem{2}
-	“Web Portal: Housing Society Management System”- Kushal Patadia et al Int. Journal of
-Engineering Research and Applications ISSN : 2248-9622, Vol. 4, Issue 2( Version 1), February 2014, pp.547-551
+	Sanjay Ghemawat, Howard Gobioff,Shun-Tak Leung. The Google file system[C]. Proceedings of the 19th ACM Symposium
+on Operating Systems Principles. New York: ACM Press, 2003:29-43. 
+
+\bibitem{3}
+    "Fay Chang, Jeffrey Dean,et al. Bigtable:A Distributed Storage System for Structured Data[J]". ACM Transactions on
+Computer Systems. 2008,26(2):1-26.
+
+\bibitem{4}
+    Mehdi Hojabri,’ Ensuring data storage security in cloud computing with effect of Kerberos’,Vol. 1 Issue 5 , July - 2012 ISSN: 2278- 01 81
 
 
 
