--- a/docs/report/screenshots.tex
+++ b/docs/report/screenshots.tex
@@ -63,3 +63,11 @@
     \label{1}
 \end{center}
 \end{figure}
+
+\begin{figure}[h]
+\begin{center}
+  \psfig{figure=./img/youtube.png,height=3.6in}
+    \caption{Youtube Player}
+    \label{1}
+\end{center}
+\end{figure}
