--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -44,8 +44,8 @@
 \addcontentsline{toc}{chapter}{Abstract}
 \listoffigures
 \addcontentsline{toc}{chapter}{List of Figures}
-% \listoftables
-% \addcontentsline{toc}{chapter}{List of Tables}
+ \listoftables
+\addcontentsline{toc}{chapter}{List of Tables}
 
 
 
